<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shubham.myappportfolio.MainActivity">

    <Button
        android:id="@+id/app3_button"
        style="@style/ApplistButton"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/app2_button"
        android:layout_alignStart="@+id/app2_button"
        android:layout_below="@+id/app2_button"
        android:layout_marginTop="15dp"
        android:text="@string/app3_name" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/app_list_title"
        android:textSize="30sp" />

    <Button
        android:id="@+id/app1_button"

        style="@style/ApplistButton"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/app1_name" />

    <Button
        android:id="@+id/app2_button"
        style="@style/ApplistButton"
        android:layout_below="@+id/app1_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/app2_name" />

    <Button
        android:id="@+id/app4_button"
        style="@style/ApplistButton"
        android:layout_alignLeft="@+id/app3_button"
        android:layout_alignStart="@+id/app3_button"
        android:layout_below="@+id/app3_button"
        android:layout_marginTop="15dp"
        android:text="@string/app4_name" />

    <Button
        android:id="@+id/app5_button"
        style="@style/ApplistButton"
        android:layout_alignLeft="@+id/app4_button"
        android:layout_alignStart="@+id/app4_button"
        android:layout_below="@+id/app4_button"
        android:layout_marginTop="15dp"
        android:text="@string/app5_name" />

    <Button
        android:id="@+id/app6_button"
        style="@style/ApplistButton"
        android:layout_alignLeft="@+id/app5_button"
        android:layout_alignStart="@+id/app5_button"
        android:layout_below="@+id/app5_button"
        android:layout_marginTop="15dp"
        android:text="@string/app6_name" />
</RelativeLayout>
